# django-products-clothing

./: MANIFEST.in  README.md  setup.cfg
django-products-clothing/: admin.py  filter.py  models.py  urls.py
products/: signals.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_models.py  test_signals.py
